[package]
name = "glab"
version = "0.1.0"
authors = ["ibado"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["blocking", "json"]  }
json = "0.12.4"
